--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -4,7 +4,7 @@
 <title>Aye yo whats gud</title>
 </head>
 <body>
-<h1>Welcom to the internet!</h1>
+<h1>Welcome to the internet!</h1>
 <p>i wonder if anyone will ever see this</p>
 </body>
 </html>
