--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Welcome to the internet!</h1>
 <p>i wonder if anyone will ever see this</p>
+<img src="no bitches.jpg">
 </body>
 </html>
